# marcosanguineti-website

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
content/authors/admin/: _index.md
content/event/cae_2022/: index.md
content/event/example/: index.md
content/home/: accomplishments.md  contact.md  experience.md  skills.md
content/post/m1_2021/: index.md
content/post/pyside2_no_wnd/: index.md
content/post/pythonflow/: index.md
content/project/how_to/: index.md
content/project/python_coding/: index.md
content/publication/asme_2022/: cite.bib  index.md
content/publication/cfd_study/: cite.bib  index.md
frontend/: Dockerfile
frontend/public/: index.html
frontend/public/css/: styles.css
frontend/src/: App.js
frontend/src/pages/: About.js  Career.js  Chatbot.js  Clokko.js  ExternalRedirect.js  Home.js
marcosanguineti_website/: __init__.py  settings.py  utils.py
marcosanguineti_website/components/: __init__.py
marcosanguineti_website/components/publications_gallery/: __init__.py
marcosanguineti_website/components/publications_gallery/frontend/: package-lock.json
marcosanguineti_website/components/publications_gallery/frontend/src/: PublicationsGallery.tsx  (+2 more)
marcosanguineti_website/components/repos_gallery/: __init__.py
marcosanguineti_website/pages/: __init__.py  contacts.py  homepage.py  page.py  publications.py  repos.py  work_experience.py
scripts/: build_components.sh
src/: contacts.html  work_experience.html
static/: styles.css
(+2 files in other folders)
